--- a/OriginalStyleGAN.ipynb
+++ b/OriginalStyleGAN.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a5bc00c5-1d59-43a2-9457-9ecf53e18fc9",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "681f09cb-95d3-4638-b00b-2ca6e2b152a8",
    "metadata": {},
@@ -19,7 +17,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d4e4d099-43ec-47e3-af42-8eff25913d25",
    "metadata": {},
@@ -28,7 +25,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4036051a-e622-43ea-9feb-f57dc1e9b599",
    "metadata": {},
@@ -37,7 +33,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d51da9fa-63d3-4899-a9fc-79b325bb8271",
    "metadata": {},
@@ -53,7 +48,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "32c6cd92-0cdf-4698-85ba-5cfefffd794b",
    "metadata": {},
@@ -64,7 +58,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "80adfbfd-62ea-420d-99ab-0a731d8da14e",
    "metadata": {},
@@ -81,7 +74,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "930e3356-1898-48c2-a13f-d8fceaf95095",
    "metadata": {},
@@ -98,17 +90,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "5bdc6454-4adf-42fd-a277-b13f3106e719",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtf\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mimport\u001b[39;00m keras\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-08-22 01:27:27.092560: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -123,20 +114,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "b05af5d2-562e-4b2f-89a0-4a3d02cc9ea2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "base_image_path = \"./random_face_1.png\"\n",
-    "style_reference_image_path = \"./style_klimt.jpg\""
+    "base_image_path = \"./random_face_2.png\"\n",
+    "style_reference_image_path = \"./style_mucha.png\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "304fcebf-3de2-4615-b629-f3b71a948a9f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "original_width, original_height = keras.utils.load_img(base_image_path).size\n",
@@ -148,7 +143,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "4deb9c17-97c0-4342-916f-211735c5a398",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def preprocess_image(image_path):\n",
@@ -164,7 +161,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "7221e596-41f1-4aea-b537-c569d2c86e34",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def deprocess_image(img):\n",
@@ -185,8 +184,57 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "44b2d958-d2ee-476a-adb3-2701beeb4546",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-08-22 01:27:30.115279: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:30.115350: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0c:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:30.118839: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:30.118870: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0c:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:30.118889: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:30.118909: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0c:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:30.431722: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:30.431762: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0c:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:30.431784: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:30.431801: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0c:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:30.431814: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:30.431827: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0c:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:31.124026: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:31.124149: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0c:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:31.124188: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:31.124194: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1722] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2023-08-22 01:27:31.124287: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0c:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:31.124296: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1722] Could not identify NUMA node of platform GPU id 1, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2023-08-22 01:27:31.124320: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0b:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:31.124357: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1635] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 21568 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:0b:00.0, compute capability: 8.6\n",
+      "2023-08-22 01:27:31.124904: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:0c:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-08-22 01:27:31.124927: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1635] Created device /job:localhost/replica:0/task:0/device:GPU:1 with 21568 MB memory:  -> device: 1, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:0c:00.0, compute capability: 8.6\n"
+     ]
+    }
+   ],
    "source": [
     "model = keras.applications.vgg19.VGG19(weights=\"imagenet\", include_top=False)\n",
     "outputs_dict = dict([(layer.name, layer.output) for layer in model.layers])\n",
@@ -197,7 +245,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "69352f6c-2d07-44cb-935f-7e1db924510a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def content_loss(base_img, combination_img):\n",
@@ -208,7 +258,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "bc945c95-e2f1-4b57-93eb-0e12ea22d6c4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def gram_matrix(x):\n",
@@ -229,7 +281,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "a1d989b5-717e-48e4-b444-a600e5bbfae1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def total_variation_loss(x):\n",
@@ -246,7 +300,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "d903756b-298a-4a2b-9f07-25300c7cfaa5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "style_layer_names = [\"block1_conv1\",\n",
@@ -266,7 +322,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "7ad4d0b4-ad76-416e-92ae-3cea184fdbbb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def compute_loss(combination_image, base_image, style_reference_image):\n",
@@ -297,7 +355,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "fd63c945-5980-4495-afe1-6e87b0419ae5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "@tf.function\n",
@@ -315,7 +375,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "e4cf1da7-5dea-431a-9394-072656b803d2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "optimizer = keras.optimizers.SGD(\n",
@@ -330,7 +392,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "1627ac8a-f60c-40bf-be7b-644e18e68ce5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "base_image = preprocess_image(base_image_path)\n",
@@ -342,38 +406,52 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "65274074-2fe6-4faf-8ec5-00eb74bc4c7a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-08-22 01:27:35.855959: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:424] Loaded cuDNN version 8600\n",
+      "2023-08-22 01:27:36.784225: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:637] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
+      "2023-08-22 01:27:38.871829: I tensorflow/compiler/xla/service/service.cc:169] XLA service 0x56388070 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "2023-08-22 01:27:38.871863: I tensorflow/compiler/xla/service/service.cc:177]   StreamExecutor device (0): NVIDIA GeForce RTX 3090, Compute Capability 8.6\n",
+      "2023-08-22 01:27:38.871869: I tensorflow/compiler/xla/service/service.cc:177]   StreamExecutor device (1): NVIDIA GeForce RTX 3090, Compute Capability 8.6\n",
+      "2023-08-22 01:27:38.939617: I ./tensorflow/compiler/jit/device_compiler.h:180] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100: loss=2154.66\n",
-      "Iteration 200: loss=1560.62\n",
-      "Iteration 300: loss=1312.12\n",
-      "Iteration 400: loss=1168.43\n",
-      "Iteration 500: loss=1072.89\n",
-      "Iteration 600: loss=1003.91\n",
-      "Iteration 700: loss=951.24\n",
-      "Iteration 800: loss=909.61\n",
-      "Iteration 900: loss=875.64\n",
-      "Iteration 1000: loss=847.34\n",
-      "Iteration 1100: loss=823.39\n",
-      "Iteration 1200: loss=802.88\n",
-      "Iteration 1300: loss=785.01\n",
-      "Iteration 1400: loss=769.34\n",
-      "Iteration 1500: loss=755.41\n",
-      "Iteration 1600: loss=742.97\n",
-      "Iteration 1700: loss=731.80\n",
-      "Iteration 1800: loss=721.77\n",
-      "Iteration 1900: loss=712.65\n",
-      "Iteration 2000: loss=704.34\n"
+      "Iteration 100: loss=3350.83\n",
+      "Iteration 200: loss=2848.11\n",
+      "Iteration 300: loss=2634.68\n",
+      "Iteration 400: loss=2509.77\n",
+      "Iteration 500: loss=2425.35\n",
+      "Iteration 600: loss=2363.30\n",
+      "Iteration 700: loss=2315.00\n",
+      "Iteration 800: loss=2275.90\n",
+      "Iteration 900: loss=2243.36\n",
+      "Iteration 1000: loss=2215.70\n",
+      "Iteration 1100: loss=2191.75\n",
+      "Iteration 1200: loss=2170.76\n",
+      "Iteration 1300: loss=2152.20\n",
+      "Iteration 1400: loss=2135.64\n",
+      "Iteration 1500: loss=2120.73\n",
+      "Iteration 1600: loss=2107.23\n",
+      "Iteration 1700: loss=2094.94\n",
+      "Iteration 1800: loss=2083.70\n",
+      "Iteration 1900: loss=2073.36\n",
+      "Iteration 2000: loss=2063.84\n"
      ]
     }
    ],
    "source": [
     "iterations = 2000\n",
-    "with tf.device(\"/cpu:0\"):\n",
+    "with tf.device(\"/gpu:0\"):\n",
     "    for i in range(1, iterations + 1):\n",
     "        loss, grads = compute_loss_and_grads(\n",
     "            combination_image, \n",
@@ -407,7 +485,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
